RESOLVED FIXED283108
JSC::Exception and JSWebAssemblyException are not accounting for all their allocations
https://bugs.webkit.org/show_bug.cgi?id=283108
Summary JSC::Exception and JSWebAssemblyException are not accounting for all their al...
Max Rottenkolber
Reported 2024-11-14 06:28:18 PST
JSC::Exception and JSWebAssemblyException are not accounting for all their allocations on the heap. They should call Heap::reportExtraMemoryAllocated on the stacktrace and payload allocated by them respectively.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-21 06:31:12 PST
EWS
Comment 2 2025-01-20 04:47:55 PST
Committed 289147@main (c6956e26bf70): <https://commits.webkit.org/289147@main> Reviewed commits have been landed. Closing PR #36637 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.